<resources>
    <string name="app_name">Instagram Remake</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter">ENTRAR</string>
    <string name="or">OU</string>
    <string name="enter_with_facebook">Entrar com facebook</string>
    <string name="does_not_have_account">Não tem uma conta? <b><font color="#000000">Cadastre-se</font></b></string>
</resources>