<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.presentation.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo_login"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                android:src="@drawable/instagram_logo_black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_email_input_login"
                style="@style/EditTextInputLoginForm"
                android:hint="@string/email"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextAppearance="@style/EditTextErrorLoginForm"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email_login"
                    style="@style/EditTextLoginForm"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_password_input_login"
                style="@style/EditTextInputLoginForm"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="password_toggle"
                app:errorTextAppearance="@style/EditTextErrorLoginForm"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password_login"
                    style="@style/EditTextLoginForm"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Trocando o component AppCompatButton, pela classe que eu mesmo criei TestButton
            Todos os atributos que eu quiser definir dinamicamente no código, eu preciso adicionar
            o "app". EX: app:text.. poderia ser qualquer nome EX: app:text_qualquer_nome
            eu preciso criar uma referência para esse app, então na pasta Values eu crio o XML attrs
            e lá defino todos os atributos que escolhi como app -->
            <br.com.dev.felipeferreira.instagramremake.login.presentation.TestButton
                android:id="@+id/btn_enter_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/FormContainer"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/grayBorder" />

                <TextView
                    style="@style/TextViewBaseLoginForm"
                    android:layout_gravity="center"
                    android:background="?attr/background"
                    android:padding="8dp"
                    android:text="@string/or"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_enter_facebook_login"
                style="@style/ButtonLoginForm.link"
                android:layout_gravity="center"
                android:drawableStart="@drawable/facebook_logo"
                android:drawablePadding="8dp"
                android:text="@string/enter_with_facebook" />

            <View
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignTop="@+id/txt_register_login"
                android:background="@color/grayBorder" />

            <TextView
                android:id="@+id/txt_register_login"
                style="@style/TextViewBaseLoginForm"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/does_not_have_account" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>